feat: add introduct image and contact information config for admin

--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -100,5 +100,24 @@
   "siteConfigManagement": "Quản lý thiết lập trang",
   "homeSliderImage": "Ảnh trình chiếu trang chủ",
   "homeSliderImageDescription": "Hình ảnh được sử dụng để trình chiếu ở đầu trang chủ. Chọn từ 4 đến 6 hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
-  "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công."
+  "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công.",
+  "introduceImage": "Ảnh giới thiệu",
+  "introduceImageDescription": "Hình ảnh được sử dụng để giới thiệu về trang của bạn. Chọn hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
+  "updateSiteConfigError": "Cập nhật thiết lập trang không thành công.",
+  "update": "Cập nhật",
+  "contactInformation": "Thông tin liên hệ",
+  "contactInformationDescription": "Thông tin liên hệ của bạn sẽ được hiển thị ở đầu và cuối trang. Thông tin liên hệ cho từng bài viết sẽ được thiết lập riêng.",
+  "phone": "Điện thoại",
+  "phoneRequired": "Điện thoại không được phép để trống.",
+  "phoneInvalid": "Điện thoại không hợp lệ.",
+  "email": "Email",
+  "emailRequired": "Email không được phép để trống.",
+  "emailInvalid": "Email không hợp lệ.",
+  "address": "Địa chỉ",
+  "addressRequired": "Địa chỉ không được phép để trống.",
+  "bank": "Ngân hàng",
+  "bankRequired": "Ngân hàng không được phép để trống.",
+  "tax": "Mã số thuế",
+  "taxRequired": "Mã số thuế không được phép để trống.",
+  "getSiteConfigError": "Đã xảy ra lỗi khi tải thiết lập trang. Vui lòng thử lại sau."
 }
