feat: add post feature for admin

--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -1,22 +1,55 @@
 {
   "addCategorySuccess": "Thêm danh mục thành công.",
+  "addPost": "Thêm bài viết",
+  "address": "Địa chỉ",
+  "addressBook": "Sổ địa chỉ",
+  "addressRequired": "Địa chỉ không được phép để trống.",
+  "avatar": "Ảnh đại diện",
+  "avatarRequired": "Ảnh đại diện không được phép để trống.",
+  "bank": "Ngân hàng",
+  "bankRequired": "Ngân hàng không được phép để trống.",
   "cancel": "Cancel",
+  "caption": "Chú thích",
   "category": "Danh mục",
   "categoryGroup": "Nhóm danh mục",
   "categoryGroupRequired": "Nhóm danh mục không được phép để trống.",
   "categoryManagement": "Quản lý danh mục",
   "code": "Mã",
+  "config": "Thiết lập",
   "confirm": "Confirm",
+  "contact": "Danh bạ",
+  "contactInformation": "Thông tin liên hệ",
+  "contactInformationDescription": "Thông tin liên hệ của bạn sẽ được hiển thị ở đầu và cuối trang. Thông tin liên hệ cho từng bài viết sẽ được thiết lập riêng.",
+  "content": "Nội dung",
+  "contentRequired": "Nội dung không được phép để trống.",
   "dashboard": "Bảng điều khiển",
   "deleteCategory": "Xóa danh mục <span>{{name}}</span>",
   "deleteCategoryConfirmation": "Bạn có chắc chắn muốn xóa danh mục này?",
   "deleteCategorySuccess": "Xóa danh mục thành công.",
   "deleteName": "Xóa <span>{{name}}</span>",
+  "detailInfo": "Thông tin chi tiết",
+  "district": "Quận/Huyện",
   "editCategorySuccess": "Chỉnh sửa danh mục thành công.",
+  "email": "Email",
+  "emailInvalid": "Email không hợp lệ.",
+  "emailRequired": "Email không được phép để trống.",
+  "enterCaption": "Nhập chú thích cho hình ảnh này",
+  "enterCode": "Nhập mã",
+  "enterTitle": "Nhập tiêu đề",
   "error": "Lỗi!",
   "errorCode": "Mã lỗi",
   "estate": "Bất động sản",
+  "estateList": "Danh sách bất động sản",
+  "estateProperty": "Thuộc tính bất động sản",
+  "generalInfo": "Thông tin chung",
   "getError": "Đã xảy ra lỗi khi tải dữ liệu mà bạn cần. Vui lòng thử lại sau.",
+  "getSiteConfigError": "Đã xảy ra lỗi khi tải thiết lập trang. Vui lòng thử lại sau.",
+  "homeSliderImage": "Ảnh trình chiếu trang chủ",
+  "homeSliderImageDescription": "Hình ảnh được sử dụng để trình chiếu ở đầu trang chủ. Chọn từ 4 đến 6 hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
+  "insertImage": "Chèn ảnh",
+  "introduceImage": "Ảnh giới thiệu",
+  "introduceImageDescription": "Hình ảnh được sử dụng để giới thiệu về trang của bạn. Chọn hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
+  "location": "Khu vực",
   "name": "Tên",
   "other": "Khác",
   "page": {
@@ -59,11 +92,21 @@
   "parentCategory": "Danh mục cha",
   "parentCategoryRequired": "Danh mục cha không được phép để trống.",
   "performActionError": "Đã xảy ra lỗi khi thực hiện hành động này. Vui lòng thử lại sau.",
+  "phone": "Điện thoại",
+  "phoneInvalid": "Điện thoại không hợp lệ.",
+  "phoneRequired": "Điện thoại không được phép để trống.",
   "pickImage": "Chọn ảnh",
   "post": "Bài viết",
+  "postManagement": "Quản lý bài viết",
+  "province": "Tỉnh/Thành phố",
+  "saveAndPublish": "Lưu và xuất bản",
+  "saveDraft": "Lưu nháp",
+  "saveDraftSuccess": "Lưu nháp thành công.",
   "selectCategoryGroup": "Chọn nhóm danh mục",
   "selectParentCategory": "Chọn danh mục cha",
   "selectWebsite": "Chọn website",
+  "siteConfig": "Thiết lập trang",
+  "siteConfigManagement": "Quản lý thiết lập trang",
   "success": "Thành công!",
   "table": {
     "header": {
@@ -84,40 +127,16 @@
       "previous": "Previous"
     }
   },
-  "uploadImageError": "Tải ảnh lên không thành công",
-  "website": "Website",
-  "websiteRequired": "Website không được phép để trống.",
-  "contact": "Danh bạ",
-  "estateList": "Danh sách bất động sản",
-  "estateProperty": "Thuộc tính bất động sản",
-  "location": "Khu vực",
-  "province": "Tỉnh/Thành phố",
-  "district": "Quận/Huyện",
-  "ward": "Xã/Phường/Thị trấn",
-  "addressBook": "Sổ địa chỉ",
-  "config": "Thiết lập",
-  "siteConfig": "Thiết lập trang",
-  "siteConfigManagement": "Quản lý thiết lập trang",
-  "homeSliderImage": "Ảnh trình chiếu trang chủ",
-  "homeSliderImageDescription": "Hình ảnh được sử dụng để trình chiếu ở đầu trang chủ. Chọn từ 4 đến 6 hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
-  "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công.",
-  "introduceImage": "Ảnh giới thiệu",
-  "introduceImageDescription": "Hình ảnh được sử dụng để giới thiệu về trang của bạn. Chọn hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
-  "updateSiteConfigError": "Cập nhật thiết lập trang không thành công.",
-  "update": "Cập nhật",
-  "contactInformation": "Thông tin liên hệ",
-  "contactInformationDescription": "Thông tin liên hệ của bạn sẽ được hiển thị ở đầu và cuối trang. Thông tin liên hệ cho từng bài viết sẽ được thiết lập riêng.",
-  "phone": "Điện thoại",
-  "phoneRequired": "Điện thoại không được phép để trống.",
-  "phoneInvalid": "Điện thoại không hợp lệ.",
-  "email": "Email",
-  "emailRequired": "Email không được phép để trống.",
-  "emailInvalid": "Email không hợp lệ.",
-  "address": "Địa chỉ",
-  "addressRequired": "Địa chỉ không được phép để trống.",
-  "bank": "Ngân hàng",
-  "bankRequired": "Ngân hàng không được phép để trống.",
   "tax": "Mã số thuế",
   "taxRequired": "Mã số thuế không được phép để trống.",
-  "getSiteConfigError": "Đã xảy ra lỗi khi tải thiết lập trang. Vui lòng thử lại sau."
+  "title": "Tiêu đề",
+  "titleRequired": "Tiêu đề không được phép để trống.",
+  "update": "Cập nhật",
+  "updateSiteConfigError": "Cập nhật thiết lập trang không thành công.",
+  "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công.",
+  "uploadImageError": "Tải ảnh lên không thành công",
+  "viewPost": "Xem bài viết",
+  "ward": "Xã/Phường/Thị trấn",
+  "website": "Website",
+  "websiteRequired": "Website không được phép để trống."
 }
