feat: add category list to the post sidebar and show post based on selected sidebar item

--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -164,5 +164,6 @@
   "viewPost": "Xem bài viết",
   "ward": "Xã/Phường/Thị trấn",
   "website": "Website",
-  "websiteRequired": "Website không được phép để trống."
+  "websiteRequired": "Website không được phép để trống.",
+  "allPosts": "Tất cả bài viết"
 }
