--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -9,6 +9,8 @@
   "avatar": "Ảnh đại diện",
   "avatarRequired": "Ảnh đại diện không được phép để trống.",
   "bank": "Ngân hàng",
+  "bankAccount": "Tài khoản ngân hàng",
+  "bankAccountRequired": "Tài khoản ngân hàng không được phép để trống.",
   "bankRequired": "Ngân hàng không được phép để trống.",
   "cancel": "Cancel",
   "caption": "Chú thích",
@@ -31,6 +33,9 @@
   "deleteCategoryConfirmation": "Bạn có chắc chắn muốn xóa danh mục này?",
   "deleteCategorySuccess": "Xóa danh mục thành công.",
   "deleteName": "Xóa <span>{{name}}</span>",
+  "description": "Mô tả",
+  "descriptionRequired": "Mô tả không được phép để trống.",
+  "descriptionWillBeUsedForSEO": "Mô tả này có thể được sử dụng để hiển thị trên kết quả tìm kiếm cho trang của bạn khi nội dung trên trang không phù hợp. <span>Tìm hiểu thêm</span>",
   "detailInfo": "Thông tin chi tiết",
   "district": "Quận/Huyện",
   "draft": "Nháp",
@@ -43,10 +48,16 @@
   "email": "Email",
   "emailInvalid": "Email không hợp lệ.",
   "emailRequired": "Email không được phép để trống.",
+  "enterAddress": "Nhập địa chỉ",
+  "enterBankAccount": "Nhập tài khoản ngân hàng",
   "enterCaption": "Nhập chú thích cho hình ảnh này",
   "enterCode": "Nhập mã",
+  "enterDescription": "Nhập mô tả",
+  "enterEmail": "Nhập email",
   "enterName": "Nhập tên",
+  "enterPhone": "Nhập số điện thoại",
   "enterTitle": "Nhập tiêu đề",
+  "enterWebsiteName": "Nhập tên trang",
   "error": "Lỗi!",
   "errorCode": "Mã lỗi",
   "estate": "Bất động sản",
@@ -62,6 +73,7 @@
   "introduceImage": "Ảnh giới thiệu",
   "introduceImageDescription": "Hình ảnh được sử dụng để giới thiệu về trang của bạn. Chọn hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
   "location": "Khu vực",
+  "mayTakeAWhileToEffectConfigWebsite": "Có thể mất một khoảng thời gian để thay đổi xuất hiện trên trang của bạn.",
   "moveToTop": "Đưa lên đầu",
   "moveToTopError": "Đưa bài viết lên đầu không thành công.",
   "moveToTopSuccess": "Đưa bài viết lên đầu thành công.",
@@ -164,6 +176,8 @@
   "unPublishPostMessage": "Bạn có chắc muốn huỷ xuất bản bài viết này? Bài viết sẽ bị ẩn khỏi mọi kết quả tìm kiếm. Bạn có thể tiếp tục chỉnh sửa bài viết và xuất bản lại sau.",
   "unPublishSuccess": "Huỷ xuất bản thành công.",
   "update": "Cập nhật",
+  "updateConfigWebsiteError": "Cập nhật thông tin trang không thành công. Vui lòng thử lại.",
+  "updateConfigWebsiteSuccess": "Cập nhật thông tin trang thành công.",
   "updatedAtDate": "Cập nhật vào {{date}}",
   "updateSiteConfigError": "Cập nhật thiết lập trang không thành công.",
   "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công.",
@@ -171,5 +185,9 @@
   "viewPost": "Xem bài viết",
   "ward": "Xã/Phường/Thị trấn",
   "website": "Website",
-  "websiteRequired": "Website không được phép để trống."
+  "websiteName": "Tên trang",
+  "websiteNameRequired": "Tên trang không được phép để trống.",
+  "websiteRequired": "Website không được phép để trống.",
+  "enterTax": "Nhập mã số thuế",
+  "taxRequired": "Mã số thuế không được phép để trống."
 }
