--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -18,6 +18,8 @@
   "categoryGroup": "Nhóm danh mục",
   "categoryGroupRequired": "Nhóm danh mục không được phép để trống.",
   "categoryManagement": "Quản lý danh mục",
+  "change": "Thay đổi",
+  "clickToChoosePost": "Nhấn để chọn bài viết",
   "code": "Mã",
   "completed": "Đã hoàn thiện",
   "config": "Thiết lập",
@@ -35,7 +37,7 @@
   "deleteName": "Xóa <span>{{name}}</span>",
   "description": "Mô tả",
   "descriptionRequired": "Mô tả không được phép để trống.",
-  "descriptionWillBeUsedForSEO": "Mô tả này có thể được sử dụng để hiển thị trên kết quả tìm kiếm cho trang của bạn khi nội dung trên trang không phù hợp. <span>Tìm hiểu thêm</span>",
+  "descriptionWillBeUsedForSEO": "Mô tả được sử dụng để hiển thị trên kết quả tìm kiếm cho trang chủ (và các trang không hỗ trợ thiết lập SEO khác) để tóm tắt (hoặc giới thiệu) về nội dung xuất hiện trên trang. <span>Tìm hiểu thêm</span>.",
   "detailInfo": "Thông tin chi tiết",
   "district": "Quận/Huyện",
   "draft": "Nháp",
@@ -56,6 +58,7 @@
   "enterEmail": "Nhập email",
   "enterName": "Nhập tên",
   "enterPhone": "Nhập số điện thoại",
+  "enterTax": "Nhập mã số thuế",
   "enterTitle": "Nhập tiêu đề",
   "enterWebsiteName": "Nhập tên trang",
   "error": "Lỗi!",
@@ -67,8 +70,16 @@
   "getError": "Đã xảy ra lỗi khi tải dữ liệu mà bạn cần. Vui lòng thử lại sau.",
   "getPostError": "Lấy thông tin bài viết không thành công! Vui lòng thử lại sau.",
   "getSiteConfigError": "Đã xảy ra lỗi khi tải thiết lập trang. Vui lòng thử lại sau.",
+  "getWebsiteConfigError": "Lấy thông tin thiết lập trang không thành công. Vui lòng thử lại sau.",
+  "home": "Trang chủ",
   "homeHero": "Ảnh trình chiếu",
   "homeHeroSubtitle": "Hình ảnh được sử dụng để trình chiếu ở đầu trang chủ. Chọn từ 4 đến 6 hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
+  "homeIntroduce": "Giới thiệu",
+  "homeIntroduceSubtitle": "Thiết lập bài viết và hình ảnh xuất hiện trên trang chủ tại mục 'Về cúng tôi'. Hình ảnh sẽ được thay đổi về kích thước phù hợp với nội dung hiển thị và loại thiết bị.",
+  "homeService": "Dịch vụ",
+  "homeServiceSubtitle": "Thiết lập bài viết hoặc danh mục hiển thị trên trang chủ tại mục 'Dịch vụ của chúng tôi'. Tối đa 4 bài viết hoặc danh mục sẽ được hiển thị.",
+  "image": "Hình ảnh",
+  "imageRequired": "Hình ảnh không được phép để trống.",
   "insertImage": "Chèn ảnh",
   "introduceImage": "Ảnh giới thiệu",
   "introduceImageDescription": "Hình ảnh được sử dụng để giới thiệu về trang của bạn. Chọn hình tỷ lệ 16:9 để đảm bảo trải nghiệm tốt trên mọi thiết bị.",
@@ -123,8 +134,10 @@
   "phoneInvalid": "Điện thoại không hợp lệ.",
   "phoneRequired": "Điện thoại không được phép để trống.",
   "pickImage": "Chọn ảnh",
+  "pickPost": "Chọn bài viết",
   "post": "Bài viết",
   "postManagement": "Quản lý bài viết",
+  "postRequired": "Bài viết không được phép để trống.",
   "product": "Sản phẩm",
   "project": "Dự án",
   "province": "Tỉnh/Thành phố",
@@ -166,6 +179,7 @@
     }
   },
   "tax": "Mã số thuế",
+  "taxRequired": "Mã số thuế không được phép để trống.",
   "title": "Tiêu đề",
   "titleRequired": "Tiêu đề không được phép để trống.",
   "unPublish": "Huỷ xuất bản",
@@ -186,19 +200,5 @@
   "website": "Website",
   "websiteName": "Tên trang",
   "websiteNameRequired": "Tên trang không được phép để trống.",
-  "websiteRequired": "Website không được phép để trống.",
-  "enterTax": "Nhập mã số thuế",
-  "taxRequired": "Mã số thuế không được phép để trống.",
-  "home": "Trang chủ",
-  "homeIntroduce": "Giới thiệu",
-  "homeIntroduceSubtitle": "Thiết lập bài viết và hình ảnh xuất hiện trên trang chủ tại mục 'Về cúng tôi'. Hình ảnh sẽ được thay đổi về kích thước phù hợp với nội dung hiển thị và loại thiết bị.",
-  "image": "Hình ảnh",
-  "imageRequired": "Hình ảnh không được phép để trống.",
-  "postRequired": "Bài viết không được phép để trống.",
-  "clickToChoosePost": "Nhấn để chọn bài viết",
-  "pickPost": "Chọn bài viết",
-  "getWebsiteConfigError": "Lấy thông tin thiết lập trang không thành công. Vui lòng thử lại sau.",
-  "change": "Thay đổi",
-  "homeService": "Dịch vụ",
-  "homeServiceSubtitle": "Thiết lập bài viết hoặc danh mục hiển thị trên trang chủ tại mục 'Dịch vụ của chúng tôi'. Tối đa 4 bài viết hoặc danh mục sẽ được hiển thị."
+  "websiteRequired": "Website không được phép để trống."
 }
