feat(ERE-27): update category logic

--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -1,6 +1,8 @@
 {
   "addCategory": "Thêm danh mục",
   "addCategorySuccess": "Thêm danh mục thành công.",
+  "addEstateProperty": "Thêm thuộc tính bất động sản",
+  "addEstatePropertySuccess": "Thêm thuộc tính bất động sản thành công!",
   "addPost": "Thêm bài viết",
   "address": "Địa chỉ",
   "addressBook": "Sổ địa chỉ",
@@ -44,6 +46,8 @@
   "edit": "Chỉnh sửa",
   "editCategory": "Chỉnh sửa danh mục",
   "editCategorySuccess": "Chỉnh sửa danh mục thành công.",
+  "editEstateProperty": "Cập nhật thuộc tính bất động sản",
+  "editEstatePropertySuccess": "Cập nhật thuộc tính bất động sản thành công!",
   "editPost": "Chỉnh sửa bài viết",
   "editPostError": "Chỉnh sửa bài viết không thành công.",
   "editPostSuccess": "Chỉnh sửa bài viết thành công.",
@@ -130,6 +134,7 @@
   "parentCategory": "Danh mục cha",
   "parentCategoryRequired": "Danh mục cha không được phép để trống.",
   "performActionError": "Đã xảy ra lỗi khi thực hiện hành động này. Vui lòng thử lại sau.",
+  "permission": "Quyền hạn",
   "phone": "Điện thoại",
   "phoneInvalid": "Điện thoại không hợp lệ.",
   "phoneRequired": "Điện thoại không được phép để trống.",
@@ -147,10 +152,12 @@
   "publishPost": "Xuất bản bài viết {{title}}",
   "publishPostMessage": "Bạn có chắc muốn xuất bản bài viết này? Bài viết sẽ hiển thị công khai trên trang và mọi người có thể tìm thấy bài viết này, bằng bất kỳ cách nào.",
   "publishSuccess": "Xuất bản bài viết thành công.",
+  "role": "Vai trò",
   "save": "Lưu",
   "saveAndPublish": "Lưu và xuất bản",
   "saveDraft": "Lưu nháp",
   "saveDraftSuccess": "Lưu nháp thành công.",
+  "selectCategory": "Chọn danh mục",
   "selectCategoryGroup": "Chọn nhóm danh mục",
   "selectParentCategory": "Chọn danh mục cha",
   "selectWebsite": "Chọn website",
@@ -195,6 +202,8 @@
   "updateSiteConfigError": "Cập nhật thiết lập trang không thành công.",
   "updateSiteConfigSuccess": "Cập nhật thiết lập trang thành công.",
   "uploadImageError": "Tải ảnh lên không thành công",
+  "user": "Người dùng",
+  "userAndPermission": "Người dùng & Quyền",
   "viewPost": "Xem bài viết",
   "ward": "Xã/Phường/Thị trấn",
   "website": "Website",
