feat: add images to posts

--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -20,6 +20,7 @@
   "categoryGroup": "Nhóm danh mục",
   "categoryGroupRequired": "Nhóm danh mục không được phép để trống.",
   "categoryManagement": "Quản lý danh mục",
+  "categoryRequired": "Danh mục không được phép để trống.",
   "change": "Thay đổi",
   "clickToChoosePost": "Nhấn để chọn bài viết",
   "code": "Mã",
@@ -144,6 +145,7 @@
   "postManagement": "Quản lý bài viết",
   "postRequired": "Bài viết không được phép để trống.",
   "product": "Sản phẩm",
+  "productManagement": "Quản lý sản phẩm",
   "project": "Dự án",
   "province": "Tỉnh/Thành phố",
   "publish": "Xuất bản",
